; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_kpc_x86.c_kpc_is_running_configurable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_kpc_x86.c_kpc_is_running_configurable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kpc_running_classes = common dso_local global i32 0, align 4
@KPC_CLASS_CONFIGURABLE_MASK = common dso_local global i32 0, align 4
@kpc_running_cfg_pmc_mask = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kpc_is_running_configurable(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @kpc_popcount(i32 %3)
  %5 = call i64 (...) @kpc_configurable_count()
  %6 = icmp sle i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* @kpc_running_classes, align 4
  %10 = load i32, i32* @KPC_CLASS_CONFIGURABLE_MASK, align 4
  %11 = and i32 %9, %10
  %12 = load i32, i32* @KPC_CLASS_CONFIGURABLE_MASK, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32, i32* @kpc_running_cfg_pmc_mask, align 4
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %15, %16
  %18 = load i32, i32* %2, align 4
  %19 = icmp eq i32 %17, %18
  br label %20

20:                                               ; preds = %14, %1
  %21 = phi i1 [ false, %1 ], [ %19, %14 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @kpc_popcount(i32) #1

declare dso_local i64 @kpc_configurable_count(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
